--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Create a pixi game scaffold courtesy of @hayesmaker64",
   "main": "index.js",
   "dependencies": {
+    "fpsmeter": "^0.3.1",
     "gsap": "^2.0.1",
+    "p2": "^0.7.1",
     "pixi.js": "^5.3.3"
   },
   "devDependencies": {
