--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-pixigen",
+  "name": "v2-thruster",
   "version": "0.2.0",
   "description": "Create a pixi game scaffold courtesy of @hayesmaker64",
   "main": "index.js",
