--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Create a pixi game scaffold courtesy of @hayesmaker64",
   "main": "index.js",
   "dependencies": {
+    "@armathai/pixi-stats": "^1.0.1",
     "fpsmeter": "^0.3.1",
     "gsap": "^2.0.1",
     "p2": "^0.7.1",
