--- a/package.json
+++ b/package.json
@@ -8,14 +8,20 @@
     "fpsmeter": "^0.3.1",
     "gsap": "^2.0.1",
     "p2": "^0.7.1",
-    "pixi.js": "^5.3.3"
+    "pixi.js": "^5.3.3",
+    "stats.js": "^0.17.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
-    "jest": "^23.3.0",
+    "chai": "^3.5.0",
+    "jest": "^26.5.3",
     "jest-canvas-mock": "^1.1.0",
+    "jsdom": "^16.4.0",
+    "pixi.js-legacy": "^5.3.3",
+    "sinon": "^1.17.2",
+    "sinon-chai": "^2.8.0",
     "webpack": "^4.16.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.5",
