--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "stats.js": "^0.17.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "babel-loader": "^8.1.0",
     "chai": "^3.5.0",
     "jest": "^26.5.3",
     "jest-canvas-mock": "^1.1.0",
@@ -22,14 +23,13 @@
     "pixi.js-legacy": "^5.3.3",
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0",
-    "webpack": "^4.16.0",
-    "webpack-cli": "^3.0.8",
-    "webpack-dev-server": "^3.1.5",
-    "webpack-livereload-plugin": "^2.1.1",
-    "webpack-serve": "^2.0.2"
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.1.0",
+    "webpack-livereload-plugin": "^2.3.0",
+    "webpack-serve": "^3.2.0"
   },
   "scripts": {
-    "start": "webpack-serve --content ./dist --open",
+    "start": "webpack-serve --static ./dist --open",
     "build": "webpack --config webpack.config.js --mode development",
     "test": "jest"
   },
