--- a/package.json
+++ b/package.json
@@ -25,11 +25,10 @@
     "sinon-chai": "^2.8.0",
     "webpack": "^5.1.3",
     "webpack-cli": "^4.1.0",
-    "webpack-livereload-plugin": "^2.3.0",
     "webpack-serve": "^3.2.0"
   },
   "scripts": {
-    "start": "webpack-serve --static ./dist --open",
+    "start": "webpack-serve --static ./dist --open --hmr false",
     "build": "webpack --config webpack.config.js --mode development",
     "test": "jest"
   },
