--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0",
     "webpack": "^5.1.3",
+    "webpack-bundle-analyzer": "^3.9.0",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
   },
