--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
   },
+  "optionalDependencies": {},
   "scripts": {
     "start": "webpack-cli serve",
     "build": "webpack --config webpack.config.js --mode development",
